--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.2",
     "@react-navigation/stack": "^7.2.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "json-server": "^1.0.0-beta.3",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
